# SPE3D

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  req.txt  websocket.html
chrome/: ShareOnline.js  background.js  contentScript.js  index.html  manifest.json  popup.html  popup.js  reset.css
config/: config_example.toml
dlc/: one.dlc  two.dlc
doc/: logo.sketch
frontend/: package-lock.json
frontend/src/components/: app.js
frontend/src/components/dload_table/: index.js
frontend/src/routes/add_links/: index.js  style.css
react/: .babelrc  index.html  package-lock.json  package.json  webpack-config.js
react/src/: index.js
react/src/asset/hoster/: hoster.js
react/src/comp/: Notify.js  add-account.js  add-file.js  add-links.js  config-accounts.js  config-addon.js  config-server.js  dload-container.js  download-list.js  logo.js
react/src/con/: Config.js  Dload.js  DloadAddon.js  DloadRest.js  Ws.js  WsAddon.js  WsRest.js
react/src/stores/: ConfigStore.js  DloadStore.js  GlobalStore.js  NotifyStore.js  UiStore.js
react/src/view/: config.js  home.js  links.js
src/: bus.rs  config.rs  dlc.rs  downloader.rs  error.rs  lib.rs  list.rs  main.rs  manager.rs  models.rs  package.rs  shareonline.rs  websocket.rs  writer.rs
src/loader/: filer.rs  mod.rs  so.rs
www/: bundle.8ec35.js  bundle.8ec35.js.map  index.html  manifest.json  package.json  polyfills.2f8c5.js.map  push-manifest.json  route-add_links.chunk.2ff27.js  route-add_links.chunk.2ff27.js.map  route-add_links.chunk.7c50f.js  route-add_links.chunk.7c50f.js.map  route-add_links.chunk.a369f.js  route-add_links.chunk.a369f.js.map  route-home.chunk.181c7.js  route-home.chunk.181c7.js.map  route-profile.chunk.2ab21.js  route-profile.chunk.2ab21.js.map  style.5968a.css  sw.js
www/src/: index.js
www/src/components/: app.js
www/src/components/dload_table/: index.js  style.css
www/src/components/dropzone/: index.js  style.css
www/src/components/header/: index.js
www/ssr-build/: ssr-bundle.js  ssr-bundle.js.map  style.5968a.css.map
(+3 files in other folders)
