[package]
name = "spe3d"
version = "0.1.0"
authors = ["roba"]

[dependencies]
reqwest = "0.8.5"
regex = "0.2.5"
error-chain = "0.11.0"
dlc-decrypter = { git = "https://github.com/Roba1993/dlc-decoder" }
clippy = "0.0.189"

# md5 hasher
md-5 = "0.7.0"
digest = { version = "0.7.0", features = ["std"]}

# http server
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = {version = "0.3.6", default-features = false, features = ["json"]}
rocket_cors = "0.2.1"

# websocket server
ws = "0.7.3"

# serialisation of the data
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4.5"