[package]
name = "spe3d"
version = "0.1.1"
authors = ["roba"]

autobins = false

[[bin]]
name = "spe3d"
doc = false
path = "src/bin/main.rs"

[dependencies]
reqwest = "0.8.5"
regex = "1.0.0"
error-chain = "0.11.0"
#dlc-decrypter = "0.2.1"
dlc-decrypter = {git = "https://github.com/Roba1993/dlc-decoder"}
clippy = "0.0.200"

# md5 hasher
md-5 = "0.7.0"
digest = { version = "0.7.0", features = ["std"]}

# http server
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_contrib = {version = "0.3.10", default-features = false, features = ["json"]}
rocket_cors = "0.2.3"

# websocket server
ws = "0.7.6"

# serialisation of the data
serde = "1.0.56"
serde_derive = "1.0.56"
serde_json = "1.0.17"
toml = "0.4.6"